Offset on Outliner when Outliner header gains focus #65328

Closed
opened 2019-05-30 22:51:06 +02:00 by Daniel Santana · 9 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86

Blender Version
Broken: version: 2.80 (sub 73), branch: master, commit date: 2019-05-30 17:34, hash: 846056de6b
Worked: It worked before (probably around sub 60

Short description of error
Offset on Outliner when Outliner header gains focus. This is just cosmetic, but can give some polish to the final version.

Exact steps for others to reproduce the error
Duplicate or open a file that there are more objects or collections than can fit on the visible part of the outliner. Scroll down, and then move the mouse from the list to the header. There is a small offset on the list.OUgqQbrwxS.mp4

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86 **Blender Version** Broken: version: 2.80 (sub 73), branch: master, commit date: 2019-05-30 17:34, hash: `846056de6b` Worked: It worked before (probably around sub 60 **Short description of error** Offset on Outliner when Outliner header gains focus. This is just cosmetic, but can give some polish to the final version. **Exact steps for others to reproduce the error** Duplicate or open a file that there are more objects or collections than can fit on the visible part of the outliner. Scroll down, and then move the mouse from the list to the header. There is a small offset on the list.[OUgqQbrwxS.mp4](https://archive.blender.org/developer/F7080334/OUgqQbrwxS.mp4)
Author

Added subscriber: @dgsantana

Added subscriber: @dgsantana
Author

Just to confirm this is not only on Windows, but it also happens on my Linux Laptop.
Details below.

System Information
Operating system: Linux-4.15.0-50-generic-x86_64-with-Ubuntu-18.04-bionic 64 Bits
Graphics card: GeForce GTX 870M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.56

Blender Version
Broken: version: 2.80 (sub 73), branch: master, commit date: 2019-05-31 10:55, hash: 455e14eccd

Just to confirm this is not only on Windows, but it also happens on my Linux Laptop. Details below. **System Information** Operating system: Linux-4.15.0-50-generic-x86_64-with-Ubuntu-18.04-bionic 64 Bits Graphics card: GeForce GTX 870M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.56 **Blender Version** Broken: version: 2.80 (sub 73), branch: master, commit date: 2019-05-31 10:55, hash: `455e14eccd`
Author

And another video, showing when you go over the "icons" of the outliner. In the previous video, the cursor wasn't captured, due to my HDPI display. I capture this one on the HD screen so it now shows the cursor.

gmCgOH7RVC.mp4

And another video, showing when you go over the "icons" of the outliner. In the previous video, the cursor wasn't captured, due to my HDPI display. I capture this one on the HD screen so it now shows the cursor. [gmCgOH7RVC.mp4](https://archive.blender.org/developer/F7081400/gmCgOH7RVC.mp4)

Added subscriber: @brecht

Added subscriber: @brecht
Jacques Lucke was assigned by Brecht Van Lommel 2019-05-31 18:34:51 +02:00

Confirmed, if it doesn't happen immediately then trying some different UI scales can show it.

Caused by a63ac42. Marking as high priority not since it's the most important thing, but we should not forget about it.

Confirmed, if it doesn't happen immediately then trying some different UI scales can show it. Caused by a63ac42. Marking as high priority not since it's the most important thing, but we should not forget about it.

Added subscriber: @AbidMaqbool

Added subscriber: @AbidMaqbool

Added subscriber: @Jens.Ne

Added subscriber: @Jens.Ne

This issue was referenced by 4d8ffa5ac5

This issue was referenced by 4d8ffa5ac5bb9346bdd7199da92386f7af7ed8ae
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65328
No description provided.