Fix T65328: Offset when outliner gains focus

I'm not actually not sure under which circumstances
this code is actually doing something useful.